# llm-from-scratch

./: .gitignore  README.md  analysis.ipynb  attention.py  demo.ipynb  gpt_model.py  main.py  pyproject.toml  simple_ollama.py  test.py  tokenization.py
attention/: analysis.ipynb  attention.py  tokenization.py
final_project/: class_finetune.ipynb  compare_finetuning.py  finetune_stats.R  finetune_testing.py  gpt_class_finetune.py  run_stats.py  training-data.csv
final_project/compare_finetune_output/: metrics_full.json  metrics_lora.json
final_project/data/: explain.md  generate_data.py  label_map.txt  support_tickets_dev.csv  support_tickets_test.csv  support_tickets_train.csv
final_project/stats_output/: classical_tests.csv  val_vs_test_by_sweep_level.csv
gpt/: demo.ipynb  gpt_download.py  gpt_model.py
sample_texts/: ai-news.txt  family.txt  pytorch-doc.txt
training/: gpt_download.py  opt_single_gpu.py  train.ipynb  train.py
