[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autopep8>=2.3.2",
    "chainlit>=2.10.1",
    "colorama>=0.4.6",
    "datasets>=4.8.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "scipy>=1.17.1",
    "thop>=0.1.1.post2209072238",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
